--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Мое резюме</h1>
+        <img src="https://sun9-9.userapi.com/c857424/v857424363/12ecf/8WUtTHjGV3k.jpg">
         <p>ФИО:Куракулов Евгений Иванович</p>
         <p>Пол:М</p>   
         <p>Дата рождения: 26.11.1990</p>   
